[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Spider.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62.5195, 61.5018 )

[sub_resource type="CircleShape2D" id=2]
radius = 901.289

[node name="Spider" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.647079, 1.61767 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -74.6544, 50.8628 )
enabled = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 74.4957, 49.9128 )
enabled = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
